<resources>
    <string name="app_name">atividade5</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>
    <string name="data_de_niversario">Data de niversario</string>
    <string name="button">Button</string>
    <string name="adicionar_amigo">Adicionar amigo</string>
    <string name="todo">TODO</string>
    <string name="imgLogo">TODO</string>
    <string name="textview">TextView</string>
    <string name="meus_amigos">Meus Amigos</string>
    <string name="adicionar_um_novo_amigo">Adicionar um novo amigo</string>
    <string name="name">Name</string>
    <string name="pesquisar_amigo">Pesquisar amigo</string>
    <string name="alterar_dados_do_amigo">Alterar dados do amigo</string>
    <string name="salvar_altera_o">SALVAR ALTERAÇÃO</string>
</resources>